# StreamingMedia

FFMPEG/FFMPEG内存管理/: CMakeLists.txt  main.cc
FFMPEG/ffmpeg结构体详解/: ACFormatContext.md  AVCodec.md  AVCodecContext.md  AVFrame.md  AVPacket.md  AVStream.md
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_decoder/: CMakeLists.txt
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_decoder/src/: ffmpeg_decoder.cc  simplest_ffmpeg_decoder.cpp
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_decoder_pure/: CMakeLists.txt
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_decoder_pure/src/: ffmpeg_decoder_pure.cpp  simplest_ffmpeg_decoder_pure.cpp
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_player/: CMakeLists.txt
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_player/src/: ffmpeg_player.cpp  simplest_ffmpeg_player.cpp
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_player_su/: CMakeLists.txt
FFMPEG/simplest_ffmpeg_player/simplest_ffmpeg_player_su/src/: ffmpeg_player_su.cc  simplest_ffmpeg_player_su.cpp
FLV格式解析分离音频流/: a.out  main.c
解析AAC音频裸流/: a.out  main  main.c
解析H.264裸流/: a.out  main.c
